# github-notif-tui

./: .gitignore  Cargo.toml
src/: app.rs  categories.rs  events.rs  main.rs  review.rs  score.rs  state.rs
src/gh/: mod.rs  types.rs
src/ui/: detail.rs  help.rs  icons.rs  list.rs  mod.rs  tabs.rs  theme.rs
